--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
-    "jest": "^27.5.1",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "jest": "^27.5.1"
   },
   "dependencies": {
-    "@types/jest": "^27.4.1"
+    "@types/jest": "^27.4.1",
+    "express": "^4.17.3"
   }
 }
