--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "router": "^1.3.6",
     "supertest": "^6.2.2"
   }
 }
