add auth middleware and fixed updatePlatform

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.js",
-      "!src/index.js"
+      "!src/index.js",
+      "!src/db/index.js",
+      "!src/server/startServer.js",
+      "!src/server/index.js"
     ]
   },
   "devDependencies": {
