--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src",
     "start-dev": "nodemon src -q",
-    "test": "jest",
+    "test": "jest --runInBand --detectOpenHandles",
     "test-coverage": "jest --watchAll --coverage",
     "prepare": "husky install"
   },
@@ -20,7 +20,8 @@
       "!src/db/index.js",
       "!src/server/startServer.js",
       "!src/server/index.js"
-    ]
+    ],
+    "testEnvironment": "node"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
