modified env references in testing.yml

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,7 +2,7 @@ name: Testing on push
 
 on: push
 env:
-  REACT_APP_HEROKKU_API_URL: ${{secrets.REACT_APP_HEROKKU_API_URL}}
+  JWT_SECRET: ${{secrets.JWT_SECRET}}
 
 jobs:
   test:
